# metaFirst

./: ARCHITECTURE.md  LICENSE  README.md  RELEASE.md
supervisor/: README.md  pyproject.toml
supervisor/alembic/: env.py
supervisor/alembic/versions/: 20260201_1505_9863b775529e_add_supervisor_model_and_project_link.py  20260201_1550_1c858dc756fe_add_supervisor_db_dsn.py  20260201_1930_3ee990ffd925_add_supervisor_memberships_and_primary_.py  20260202_1000_add_sample_visibility.py  20260202_1100_add_remediation_tasks.py  20260202_1200_add_sample_id_rule_to_projects.py  20260202_1300_add_sample_field_values_index.py  20260313_1200_c4e1f9a0b2d5_add_file_annotations.py
supervisor/supervisor/: __init__.py  cli.py  config.py  main.py
supervisor/supervisor/api/: deps.py  file_annotations.py  ingest_template.py  lab_activity.py  lab_status.py  operational.py  projects.py  rdmp_management.py  remediation.py  samples.py  storage.py  supervisors.py
supervisor/supervisor/cli/: __init__.py  remediation.py
supervisor/supervisor/discovery/: api.py  db.py  models.py
supervisor/supervisor/models/: __init__.py  annotations.py  lab_activity.py  project.py  rdmp.py  remediation.py  sample.py  supervisor.py  supervisor_membership.py  user.py
supervisor/tests/: __init__.py  conftest.py  test_auth_redirect.py  test_file_annotations_api.py  test_ingest_template.py  test_lab_activity.py  test_lab_status.py  test_operational_isolation.py  test_pending_ingest_api.py  test_rdmp_management.py  test_remediation.py  test_sample_id_service.py  test_storage_api.py  test_supervisor_roles.py
(+81 files in other folders)
